<resources>
    <string name="app_name">VoyageLK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="explorehome">Sri Lanka, a journey that will leave you mesmerized and wanting more.</string>
    <string name="splsh_name">splshname</string>
    <string name="explore">Explore</string>

    <string name="RegTitle">Register</string>
    <string name="RegName">Name</string>
    <string name="RegEmail">Email</string>
    <string name="RegPass">Password</string>
    <string name="RegConfPass">Confirm Password</string>
    <string name="Regbtn">Register</string>

    <string name="LoginTitle">Login</string>
    <string name="LoginBtn">Login</string>
    <string name="ForgetPass">Forget Password</string>
    <string name="NoAccount">No Account ? Create an Account</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="re_enter_your_password">Re-enter Your Password</string>
    <string name="name">Name</string>
    <string name="traveler">Traveler</string>
    <string name="hotel_owner">Hotel Owner</string>
    <string name="enter_your_password">Type Your Password</string>

    <string-array name="userType">
        <item>Select Register Type</item>
        <item>Traveler</item>
        <item>Accommodation Provider</item>
    </string-array>
</resources>