<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="214dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppin"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="114dp"
        android:fontFamily="@font/nunitosansblack"
        android:text="@string/RegTitle"
        android:textColor="#192A56"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <EditText
        android:id="@+id/RegEmail"
        android:layout_width="364dp"
        android:layout_height="59dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="RegEmail"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/email"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/RegEmail"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:paddingStart="15dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RegPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RegEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/RegiPass"
            android:layout_width="364dp"
            android:layout_height="59dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/password"
            android:drawablePadding="8dp"
            android:hint="@string/type_your_password"
            android:inputType="textPassword"
            android:padding="8dp"
            tools:ignore="DuplicateIds" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regpst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RegPass"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passET"
            android:layout_width="364dp"
            android:layout_height="59dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/password"
            android:drawablePadding="8dp"
            android:hint="@string/re_enter_your_password"
            android:inputType="textPassword"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/travelerName"
        android:layout_width="364dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="23dp"
        android:autofillHints="@string/name"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/name"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/RegName"
        android:inputType="text"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regpst"
        tools:ignore="RtlSymmetry" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_signup"
        app:layout_constraintStart_toStartOf="@id/travelerName"
        app:layout_constraintTop_toBottomOf="@+id/regpst">

        <RadioButton
            android:id="@+id/traveler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="16dp"
            android:paddingStart="10dp"
            android:text="@string/traveler"
            android:textColor="@color/black"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/travelerName"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/hotelowner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="86dp"
            android:paddingStart="10dp"
            android:text="@string/hotel_owner"
            android:textColor="@color/black"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/radioButton2"
            app:layout_constraintTop_toBottomOf="@+id/travelerName"
            tools:ignore="RtlSymmetry" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="157dp"
        android:layout_height="56dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="28dp"
        android:text="@string/RegTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>